--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Git Hub Web Site</title>
+</head>
   <body>
-    <h1>
-    This is a test web site.
-    </h1>
+    <h1>This is a test web site</h1>
   </body>
+  
 </html>
