--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
            
 <li class="nav-item"><a class="nav-link" href="trms">Teachers</a></li>
 
-<li class="nav-item"><a class="nav-link" href="exam">Exam</a></li>
+<li class="nav-item"><a class="nav-link" href="http://dylanjoe2509.000webhostapp.com/exam/">Exam</a></li>
 
      <li class="nav-item"><a class="nav-link" href="tms">TOURISM</a></li>
                   
