--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                     <li class="nav-item"><a class="nav-link" href="ERP/htdocs">CRM/ERP</a></li>
                     
-                     <li class="nav-item"><a class="nav-link" href="https://cms192.000webhostapp.com/">COMPLAINTS</a></li>
+                     <li class="nav-item"><a class="nav-link" href="http://cms192.000webhostapp.com/">COMPLAINTS</a></li>
 
                         <li class="nav-item"><a class="nav-link" href="http://kwcproj.000webhostapp.com/school/index.php?signIn=1">School</a></li>
                         
